Resolved review comments.